creating portfolio page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/superslides.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,6 +14,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
+  <!-- LOADER -->
+  <div class="loader">
+    <div class="inner"></div>
+  </div>
+  <!-- SLIDES -->
     <div id="slides">
 
        <div class="overlay"></div>
@@ -37,7 +43,38 @@
 
     </div>
 
+<!-- NAVIGATION -->
+<nav id="navigation" class="navbar navbar-expand-lg">
+  <a class="navbar-brand" href="#">Menu</a>
 
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#about">About<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#skills">Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#stats">Stats</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#portfolio">Portfolio</a>
+      </li>
+    </ul>
+  </div>
+
+</nav>
+
+
+<!-- ABOUT -->
     <div id="about" class="section">
 
       <div class="container">
@@ -65,7 +102,7 @@
 
     </div>
 
-    <!-- skills -->
+<!-- skills -->
     <div id="skills" class="skillsSection section">
 
       <div class="container">
@@ -115,6 +152,7 @@
     </div>
 
 
+<!-- SKILL ITEM -->
     <div id="stats" class="statsSection section">
 
        <div class="container">
@@ -181,7 +219,7 @@
        </div>
     </div>
 
-    <!-- contact -->
+<!-- CONTACT-->
     <section id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
         <p class="subHeading">Like what you see?</p>
@@ -190,7 +228,7 @@
       </div>
     </section>
 
-    <!-- portfolio -->
+<!-- PORTFOLIO -->
     <div id="portfolio" class="section">
       <div class="container">
         <div class="row">
@@ -213,7 +251,7 @@
 
             <ul class="items">
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -228,11 +266,13 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -247,11 +287,34 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
+                  
+                  <div class="icons">
+                      <a href="img/portfolio/dog.jpeg" title="View image"
+                        class="openButton" data-fancybox data-caption="This is a cute 
+                        dog">
+                        <i class="fa fa-search"></i>
+                      </a>
+                      <a href="" target="_blank" class="projectLink">
+                        <i class="fa fa-link"></i>
+                      </a>
+                  </div>
+
+                  <div class="imageOverlay"></div>
+                </div>
+
+              </li>
+
+              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -266,11 +329,13 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -285,11 +350,34 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
+
+                  <div class="icons">
+                      <a href="img/portfolio/dog.jpeg" title="View image"
+                        class="openButton" data-fancybox data-caption="This is a cute 
+                        dog">
+                        <i class="fa fa-search"></i>
+                      </a>
+                      <a href="" target="_blank" class="projectLink">
+                        <i class="fa fa-link"></i>
+                      </a>
+                  </div>
+
+                  <div class="imageOverlay"></div>
+                </div>
+
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -304,11 +392,13 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
 
-              <li class="apps cpl-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
@@ -323,6 +413,29 @@
                         <i class="fa fa-link"></i>
                       </a>
                   </div>
+
+                  <div class="imageOverlay"></div>
+                </div>
+
+              </li>
+
+              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" alt="">
+                  
+                  <div class="icons">
+                      <a href="img/portfolio/dog.jpeg" title="View image"
+                        class="openButton" data-fancybox data-caption="This is a cute 
+                        dog">
+                        <i class="fa fa-search"></i>
+                      </a>
+                      <a href="" target="_blank" class="projectLink">
+                        <i class="fa fa-link"></i>
+                      </a>
+                  </div>
+
+                  <div class="imageOverlay"></div>
                 </div>
 
               </li>
@@ -333,6 +446,14 @@
         </div>
       </div>
     </div>
+
+<!-- COPY RIGHT -->
+<div class="copyrightSection">
+  <div class="col-md-12 text-center">
+    <p>&copy; Copyright Chiyomi Fukada 2020</p>
+  </div>
+</div>
+
 
 
       <script src="js/jquery.superslides.min.js"></script>
